<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <android.support.design.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="8dp"
        app:strokeColor="@android:color/darker_gray"
        app:strokeWidth="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:layout_margin="10dp"
            android:text="@string/materialcardview"/>
    </android.support.design.card.MaterialCardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            app:cardCornerRadius="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_margin="10dp"
                android:text="@string/cardview"/>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/vs"/>

        <android.support.design.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_margin="10dp"
                android:text="@string/mcardview"/>
        </android.support.design.card.MaterialCardView>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:text="@string/materialbutton"/>

    <android.support.design.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="30sp"
        android:text="@string/some_text"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:cornerRadius="15dp"
        app:iconPadding="8dp"
        app:rippleColor="@android:color/holo_green_light"
        app:strokeColor="@android:color/holo_orange_dark"
        app:strokeWidth="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/appcombatbutton"/>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="30sp"
        android:clickable="true"
        android:text="@string/some_text"
        android:layout_height="wrap_content"/>

</LinearLayout>
